--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/assets/img/avatar.jpg" type="image" sizes="16x16">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
-    <link rel="stylesheet" href="/assets/fonts/themify-icons/themify-icons.css">
+    <link rel="icon" href="assets/img/avatar.jpg" type="image" sizes="16x16">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
     <title>The Band</title>
 </head>
 <body>
@@ -78,17 +78,17 @@
 <div class="member-list">
     <div class="member-item">
         <div class="member-name">Name</div>
-        <img src="/assets/img/bandmember.jpg" alt="Member" class="member-img center">
+        <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
 
     <div class="member-item">
         <div class="member-name">Name</div>
-        <img src="/assets/img/bandmember.jpg" alt="Member" class="member-img center">
+        <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
 
     <div class="member-item">
         <div class="member-name">Name</div>
-        <img src="/assets/img/bandmember.jpg" alt="Member" class="member-img center">
+        <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
     <div class="clear"></div>
 </div>
@@ -115,7 +115,7 @@
 <div class="places-list">
 
 <div class="place-item">
-<img src="/assets/img/newyork.jpg" alt="New York" class="place-img">
+<img src="assets/img/newyork.jpg" alt="New York" class="place-img">
 <div class="place-content">
     <h3 class="place-heading">New York</h3>
     <p class="place-time">Fri 27 Nov 2016</p>
@@ -125,7 +125,7 @@
 </div>
 
 <div class="place-item">
-<img src="/assets/img/paris.jpg" alt="Paris" class="place-img">
+<img src="assets/img/paris.jpg" alt="Paris" class="place-img">
 <div class="place-content">
     <h3 class="place-heading">Paris</h3>
     <p class="place-time">Sat 28 Nov 2016</p>
@@ -135,7 +135,7 @@
 </div>
 
 <div class="place-item">
-<img src="/assets/img/sanfran.jpg" alt="Sans Francisco" class="place-img">
+<img src="assets/img/sanfran.jpg" alt="Sans Francisco" class="place-img">
 <div class="place-content">
     <h3 class="place-heading">San Francisco</h3>
     <p class="place-time">Sun 29 Nov 2016</p>
@@ -236,7 +236,7 @@
 </div>
 <div id="footer">
 <div class="map">
-<img src="/assets/img/map.jpg" alt="map" class="footer-map">
+<img src="assets/img/map.jpg" alt="map" class="footer-map">
 </div>
 <div class="end">
     <div class="icon center">
