--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/assets/img/avatar.jpg" type="image" sizes="16x16">
-    <link rel="stylesheet" href="../assets/css/main.css">
-    <link rel="stylesheet" href="../assets/css/responsive.css">
-    <link rel="stylesheet" href="../assets/fonts/themify-icons/themify-icons.css">
+    <link rel="icon" href="assets/img/avatar.jpg" type="image" sizes="16x16">
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
+    <link rel="stylesheet" href="assets/fonts/themify-icons/themify-icons.css">
     <title>The Band</title>
 </head>
 <body>
@@ -25,7 +24,7 @@
         <li><a href="#TOUR">TOUR</a></li>
         <li><a href="#CONTACT">CONTACT</a></li>
         <li>
-            <a href="#">MORE
+            <a href="">MORE
                 <i class="nav-arrow-down ti-angle-down"></i>
             </a>
             <ul class="subnav">
@@ -49,11 +48,12 @@
 <!-- End header -->
 <!-- Begin slider -->
 <div id="slider">
-
 <div class="text-content">
     <div class="text-heading">Chicago</div>
     <div class="text-description">Thank you, Chicago - A night we won't forget.</div>
+
 </div>
+
 </div>
 <!-- End slider -->
 <!-- Begin content -->
@@ -80,17 +80,17 @@
 <div class="member-list">
     <div class="member-item">
         <div class="member-name">Name</div>
-        <img src="/assets/img/bandmember.jpg" alt="Member" class="member-img center">
+        <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
 
     <div class="member-item">
         <div class="member-name">Name</div>
-        <img src="/assets/img/bandmember.jpg" alt="Member" class="member-img center">
+        <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
 
     <div class="member-item">
         <div class="member-name">Name</div>
-        <img src="/assets/img/bandmember.jpg" alt="Member" class="member-img center">
+        <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
     <div class="clear"></div>
 </div>
@@ -117,7 +117,7 @@
 <div class="places-list">
 
 <div class="place-item">
-<img src="/assets/img/newyork.jpg" alt="New York" class="place-img">
+<img src="assets/img/newyork.jpg" alt="New York" class="place-img">
 <div class="place-content">
     <h3 class="place-heading">New York</h3>
     <p class="place-time">Fri 27 Nov 2016</p>
@@ -127,7 +127,7 @@
 </div>
 
 <div class="place-item">
-<img src="/assets/img/paris.jpg" alt="Paris" class="place-img">
+<img src="assets/img/paris.jpg" alt="Paris" class="place-img">
 <div class="place-content">
     <h3 class="place-heading">Paris</h3>
     <p class="place-time">Sat 28 Nov 2016</p>
@@ -137,7 +137,7 @@
 </div>
 
 <div class="place-item">
-<img src="/assets/img/sanfran.jpg" alt="Sans Francisco" class="place-img">
+<img src="assets/img/sanfran.jpg" alt="Sans Francisco" class="place-img">
 <div class="place-content">
     <h3 class="place-heading">San Francisco</h3>
     <p class="place-time">Sun 29 Nov 2016</p>
@@ -238,7 +238,7 @@
 </div>
 <div id="footer">
 <div class="map">
-<img src="/assets/img/map.jpg" alt="map" class="footer-map">
+<img src="assets/img/map.jpg" alt="map" class="footer-map">
 </div>
 <div class="end">
     <div class="icon center">
