--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
 </div>
 
 <div class="member-list">
-    <div class="member-item">
+    <div class="member-mobile member-item">
         <div class="member-name">Name</div>
         <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
 
-    <div class="member-item">
+    <div class="member-mobile member-item">
         <div class="member-name">Name</div>
         <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
 
-    <div class="member-item">
+    <div class="member-mobile member-item">
         <div class="member-name">Name</div>
         <img src="assets/img/bandmember.jpg" alt="Member" class="member-img center">
     </div>
